*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -98,16 +98,16 @@ Hamilton wyr tweyds in China achter Jenson Button. Dit betekenden de eyrste 1–
 Hy endigeden tweyds in synen thuuswedstryd up Silverstone en dårna veerdes in den Grouten Prys van Düütsland. Undanks dat hy up Spa-Francorchamps in den grindbak belanden, wön Hamilton syne darde race van et seisoon en nam hy wederum de leiding in et kampioonskap. Skonwal sakkeden hy döär upeynvölgende upgåven in de italiaanske en singaporeeske Groute Prys når de darde plåtse in et kampioonskap. In den Grouten Prys van Japan endigeden Hamilton vyvdes. In Süüdkorea, endigeden Hamilton tweyds en veerdes in den brasiliaansken Grand Prix. In de låtste race van et seisoon in Abu Dhabi endigeden Hamilton tweyds achter Vettel, den Hamiltons rekord van jüngsten Formule Eynwerldkampioon oit verbrak.
 
 ==== 2011–2012: Låtste jåren by McLaren ====
-[[Bestaand:Lewis_Hamilton_2011_Malaysia_Qualify.jpg|links|duum|Hamilton during qualifying for the Malaysian Grand Prix]]
-At the start of the 2011 season Hamilton dismissed Red Bull Racing as "just a drinks company".<ref>{{cite web|last=Weaver|first=Paul|url=https://www.theguardian.com/sport/2011/mar/21/red-bull-lewis-hamilton|title='Red Bull are just a drinks company,' says revved-up Lewis Hamilton|work=The Guardian|date=21 March 2011|accessdate=5 July 2015}}</ref> Hamilton began the season qualifying and finishing second in the Australian Grand Prix, despite having to deal with a damaged floor on his McLaren.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9437589.stm|title=Sebastian Vettel beats Lewis Hamilton in Australian GP|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=27 March 2011|accessdate=20 November 2012}}</ref> In the Malaysian Grand Prix, he qualified second and finished seventh on-the-road, struggling partly due to tyre wear and being tagged by Ferrari's Fernando Alonso in the closing stages.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9453282.stm|title=Sebastian Vettel beats Jenson Button in Malaysian Grand Prix|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=10 April 2011|accessdate=20 November 2012}}</ref> Hamilton received a 20-second time penalty post-race for weaving whilst defending and unsuitable driving, which dropped Hamilton to eighth place.<ref>{{cite news|title=Lewis Hamilton and Fernando Alonso hit with penalties|url=http://news.bbc.co.uk/sport1/hi/formula_one/13029061.stm|publisher=BBC Sport|date=10 April 2011|accessdate=15 October 2011}}</ref> Hamilton took his first win of the season in China.<ref>{{cite news|title=Hamilton ends Vettel's winning run as McLaren star takes victory in Chinese Grand Prix|url=http://www.dailymail.co.uk/sport/formulaone/article-1377757/Lewis-Hamilton-wins-Chinese-Grand-Prix.html|work=Daily Mail|accessdate=15 October 2011|location=London|date=17 April 2011}}</ref> He then finished fourth in Turkey,<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9479645.stm|title=Red Bull's Sebastian Vettel clinches Turkish Grand Prix|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=8 May 2011|accessdate=20 November 2012}}</ref> and second in Spain.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/13491409|title=Vettel holds off Hamilton to win Spanish Grand Prix|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=22 May 2011|accessdate=20 November 2012}}</ref>
-[[Bestaand:2011_Canadian_GP_-_Hamilton.jpg|duum|Hamilton retired from the 2011 Canadian Grand Prix after colliding with teammate Button.]]
-In Monaco, he qualified tenth after Q3 was red-flagged before he could set a competitive time due to a heavy crash from Sergio Pérez. During the race Hamilton received a drive-through penalty after he bumped into Massa at the Hotel Harpin. Later on, Alguersuari crashed into Hamilton, breaking his rear wing; the race was red-flagged as Petrov crashed at the same time allowing his team to fix the car. On the restart he had a collision with Maldonado at Sainte Devote, which later he was given a 20-second time penalty for but it did not affect his finishing position.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9499975.stm|title=Sebastian Vettel triumphs after Monaco Grand Prix drama|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=29 May 2011|accessdate=20 November 2012}}</ref> In an interview with the BBC Hamilton, said that he had been to the stewards five races out of six thus far in the season and felt victimised. When prompted as to why he had been to them so much Hamilton replied "Maybe it's because I'm black. That's what Ali G says." He later explained that it was a joke, escaping further punishment.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/formula_one/13588664.stm|title=Lewis Hamilton launches attack on Monaco stewards|publisher=BBC Sport|date=30 May 2011|accessdate=7 August 2011}}</ref>
-[[Bestaand:Lewis_Hamilton2011.JPG|links|duum|Hamilton took his third victory of the season at Abu Dhabi Grand Prix.]]
-At the Canadian Grand Prix, Hamilton collided with Webber at the first corner before rejoining behind his teammate. A few laps later Hamilton, trying to capitalise on a mistake, attempted to pass Button who pushed Hamilton into the pitwall. He had to retire with a broken driveshaft; both drivers agreed that it was "one of those things".<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9511066.stm|title=Jenson Button wins stunning Canadian Grand Prix|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=12 June 2011|accessdate=20 November 2012}}</ref> In Valencia and Silverstone Hamilton finished fourth after holding off Massa whilst managing high tyre wear in the former and conserving fuel in the latter.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9522979.stm|title=Sebastian Vettel beats Fernando Alonso in European GP|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=26 June 2011|accessdate=20 November 2012}}</ref><ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/14099304|title=Fernando Alonso storms to Silverstone win|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=10 July 2011|accessdate=20 November 2012}}</ref> In Germany, Hamilton took his second victory of 2011 as he held off Webber and Alonso.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9547042.stm|title=Lewis Hamilton wins thrilling German Grand Prix|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=24 July 2011|accessdate=20 November 2012}}</ref> In Hungary Hamilton had five pitstops and a drive-through penalty for sending Paul di Resta onto the grass as he finished fourth.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9552843.stm|title=Jenson Button beats Sebastian Vettel in Hungary|publisher=BBC Sport|date=31 July 2011|accessdate=15 October 2011|first=Sarah|last=Holt}}</ref> He finished fourth at Monza after a race long battle with Michael Schumacher,<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9587511.stm|title=Sebastian Vettel cruises to dominant Italian GP victory|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=11 September 2011|accessdate=20 November 2012}}</ref> who he refused to blame for his aggressive tactics.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/14872901|title=Lewis Hamilton refuses to criticise Schumacher tactics|publisher=[[BBC Sport]]|date=11 September 2011|accessdate=20 November 2012}}</ref>
+[[Bestaand:Lewis_Hamilton_2011_Malaysia_Qualify.jpg|links|duum|Hamilton tydens de kwalifikatsy vöär den maleysisken Grand Prix]]
+By den start van et seisoon 2011 setten Hamilton Red Bull Racing weg as "enkel nen drankbedryv". Hamilton begön et seisoon med ne tweyde plåtse in sowal de kwalifikatsy as den endstand van den australisken Grouten Prys, ündanks dat hy üm mos gån med ne beskadigde vluure in synen McLaren. In den maleysisken Grand Prix, kwalificereden hy as tweyden en endigeden hy seavendes in de race, hy had muuite deals döär bandensleet en deals ümdat hy achtervolged wyr döär Fernando Alonso van Ferrari in de låtste runden. Hamilton ontving nen tydsstrav van 20 sekunden nå de race vöär slingeren tydens et verdeadigen en üngepast ryden, wat Hamilton terügsetteden når de achtste plåtse. Hamilton pakkeden syne eyrste oaverwinning van et seisoon in China. Hy endigeden vervölgens veerdes in Türkye en tweyds in Spanje.
+[[Bestaand:2011_Canadian_GP_-_Hamilton.jpg|duum|Hamilton trök sich terügge uut den kanadeesken Grand Prix van 2011 nå nen botsing med teammåt Button.]]
+In Monako, kwalificereden hy as tynden nådat de darde kwalifikatsyrunde was avelast vöärdat hy nen tyd had neder können setten vanweagen nen swåren crash van Sergio Pérez. Tydens de race kreg Hamilton nen strav wårby hy döär mocht ryden nådat hy up Massa was ebotset by Hotel Harpin. Låter botseden Alguersuari up Hamilton, den synen achtervlöggel brak; de race kreg ne roude vlagge woneyr Petrov up etsölvden moment crasheden wårdöär syn team de möägelikheyd kreg synen wågen too repareren. By den herstart had hy nen botsing med Maldonado by Sainte Devote, wår hy låter nen tydsstrav van 20 sekunden vöär kreg, mår dat verandereden syne endpositsy neet. In nen vråggesprek med BBC sei Hamilton dat hy dat seisoon töt dan too vyv van de ses races by de jüry was ewest en sich slachtovver vuuleden. Doo hy wyr evrågd wårüm hy sovölle by öär ewest was, antwoordden Hamilton "Misskyn is et ümdat ik swart bün. Dat is wat Ali G segget." Hy leggeden låter uut dat et nen grap was en ontleep so wyderen strav.
+[[Bestaand:Lewis_Hamilton2011.JPG|links|duum|Hamilton pakkeden syne darde oaverwinning van et seisoon by den Grouten Prys van Abu Dhabi.]]
+By den kanadeesken Grand Prix botseden Hamilton up Webber by de eyrste bochte vöärdat hy weder achter synen teammåt an ging ryden. Nen pår runden låter probereden Hamilton too profiteren van nen misser döar Button too passeren den Hamilton in de pitmüre düweden. Hy mos upgeaven med ne ebrökken koppeling; beyde koureurs waren et ens dat et "eyn van disse dingen (dee geböären könnet)" was. In Valencia en Silverstone endigeden Hamilton veerdes achter Massa terwyl hy derin slågeden grouten bandensleet too döärstån in de eyrste en brandstov up too spåren in de tweyde race. In Düütsland behaleden Hamilton syne tweyde oaverwinning van 2011 as hy Webber en Alonso avheeld. In Hungarye had Hamilton vyv pitstops en nen strav wårby döär mocht ryden vöär et düwen van Paul di Resta in et gras terwyl hy veerdes endigeden. Hy endigeden veerdes up Monza nå nen stryd med Michael Schumacher, den hy weigereden de sküld too geaven vöär syne aggressive taktik, den de heyle race düreden.
 
-In the Singapore Grand Prix, Hamilton caused an accident with Felipe Massa which left Hamilton needing a new front wing and serving a drive through penalty.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9599813.stm|title=Sebastian Vettel wins in Singapore but title must wait|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=25 September 2011|accessdate=20 November 2012}}</ref> Massa accused Hamilton of being "incapable of using his brain," during a post race interview. Whilst the pair conducted interviews, Massa grabbed Hamilton's shoulder saying "Good job, man, well done"; Hamilton responded by telling the Brazilian to leave him alone.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/15052980|title=Felipe Massa criticises Lewis Hamilton's driving in Singapore|publisher=[[BBC Sport]]|date=25 September 2011|accessdate=20 November 2012}}</ref> Before the Japanese Grand Prix Hamilton insisted that he had not done anything wrong during the season.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/15198820|title=Lewis Hamilton says he is not doing anything wrong|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=6 October 2011|accessdate=20 November 2012}}</ref> During the race Hamilton suffered a puncture before once again tangling with Massa; despite Ferrari pushing for Hamilton to be punished, Hamilton escaped a reprimand as he finished fifth.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9611193.stm|title=Sebastian Vettel takes crown despite Jenson Button win in Japan|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=9 October 2011|accessdate=20 November 2012}}</ref> Hamilton later told Massa to "grow up", after admitting that his Formula One career had gone over a cliff.<ref>{{cite news|title=Felipe Massa must grow up|url=http://www.thesun.co.uk/sol/homepage/sport/motorsport/3870992/Lewis-Hamilton-Felipe-Massa-must-grow-up.html|first=Ian|last=Gordon|work=The Sun|date=14 October 2011|accessdate=15 October 2011|location=London}}</ref>
+In den Grouten Prys van Singapore veröärsakeden Hamilton nen üngeval med Felipe Massa dat dervöär sorgeden dat Hamilton nen nyen vöärvlöggel nöydig had en dat hy nen strav wårby hy döär mocht ryden kreg. Massa besküldigeden Hamilton van "ünkündig üm syne harsenen too gebrüüken" too syn tydens nen vråggesprek nå de race. Terwyl sy sammen nen vråggesprek hadden, pakkeden Massa Hamiltons skolder vaste en sei "Good wark, man, good edane"; Hamilton antwoordden döär den Brasiliaan too seggen dat hy hem allenig mos låten. Vöär den japansken Grand Prix stönd Hamilton derop dat hy niks mis had edane tydens et seisoon. Tydens de race kreg Hamilton nen lekken band vöärdat hy weder med Massa in botsing kwam; ündanks dat Ferrari Hamilton estravt probereden too krygen, untsnappeden Hamilton an nen gevolg terwyl hy vyvdes endigeden. Hamilton sei Massa låter "wörd vulwassen", nådat hy tooegeaven had dat syne Formule Eynkarriere too wyd was egane.
 
-In Korea, Hamilton qualified on pole position, ending a run of 16 consecutive pole positions for Red Bull.<ref>{{cite news|title=Lewis Hamilton blasts to pole at Korean Grand Prix|url=http://news.bbc.co.uk/sport1/hi/formula_one/15319152.stm|publisher=BBC Sport|date=15 October 2011|accessdate=15 October 2011|first=Sarah|last=Holt}}</ref> He led only until turn four on lap 1, where World Champion Sebastian Vettel overtook him and went on to win the race as Hamilton finished second.<ref>{{cite news|title=Sebastien Vettel wins Korean Grand Prix from Lewis Hamilton|url=http://news.bbc.co.uk/sport1/hi/formula_one/15326210.stm|publisher=BBC Sport|date=16 October 2011|accessdate=23 October 2011|first=Sarah|last=Holt}}</ref> At the inaugural race in India, Hamilton recorded the second-fastest time in qualifying, but was penalised three places on the starting grid, after a yellow-flag infraction in Friday practice.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/15504672|title=Sebastian Vettel takes Indian Grand Prix pole|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=29 October 2011|accessdate=20 November 2012}}</ref><ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/15489950|title=Hamilton given Indian Grand Prix grid penalty|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=28 October 2011|accessdate=20 November 2012}}</ref> Hamilton finished seventh after yet another incident with Massa which left the Brazilian facing the penalty as Hamilton had to replace the front wing.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9627687.stm|title=Sebastian Vettel wins inaugural Indian Grand Prix|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=30 October 2011|accessdate=20 November 2012}}</ref> In Abu Dhabi, Hamilton qualified second and won the race.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9638444.stm|title=Lewis Hamilton wins Abu Dhabi GP battle with Fernando Alonso|first=Sarah|last=Holt|publisher=[[BBC Sport]]|date=13 November 2011|accessdate=20 November 2012}}</ref> In Brazil Hamilton and Massa ended their feud as he retired from the race and finished fifth overall in the championship.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/15913466|title=Lewis Hamilton finally ends feud with Felipe Massa|publisher=[[BBC Sport]]|date=27 November 2011|accessdate=20 November 2012}}</ref><ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/9649301.stm|title=Mark Webber beats Sebastian Vettel to win season-ending Brazilian GP|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=27 November 2011|accessdate=20 November 2012}}</ref>
+In Korea, kwalificerden Hamilton sich vöär de eyrste plåtse wårmed nen ry van 16 upeynvolgende pole positions vöär Red Bull wyr beendigd. Hy reed mår töt de veerde bochte an de leiding, wår werldkampioon Sebastian Vettel de leiding oavernam en de race wön terwyl Hamilton tweyds endigeden. By de eyrste race in India, behaleden Hamilton den tweyden tyd in de kwalifikatsy, mår wyr dree plåtsen terügeset up et startveld, nå et negeren van ne gele vlagge in de training van vrydag. Hamilton endigeden seavendes nå noch nen incident med Massa wårdöär den Brasiliaan den strav kreg terwyl Hamilton den vöärvlöggel mos vervangen. In Abu Dhabi kwalificereden Hamilton sich as tweyden en wön de race. In Brasilie beendigeden Hamilton en Massa öär konflikt as hy sich terügtrök uut de race en vyvdes endigeden in den algemeynen endstand van et kampioonskap.
 [[Bestaand:Lewis_Hamilton_2012_Malaysia_Qualify.jpg|links|duum|Hamilton took pole position for the 2012 Malaysian Grand Prix, but slipped back to third place in the race.]]
 Hamilton remained at McLaren alongside Button for the 2012 season.<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/16841566|title=Lewis Hamilton confident of a better F1 season in 2012|publisher=BBC Sport|date=1 February 2012|accessdate=14 February 2012|first=Andrew|last=Benson}}</ref> Hamilton qualified in pole position for the Australian Grand Prix, but finished third after being passed by Button at the start, and by Vettel after pitting before a safety car.<ref>{{cite news|url=http://www.autosport.com/news/report.php/id/98151|title=Hamilton baffled by lack of pace after third-place finish in Australian GP|first=Pablo|last=Elizalde|work=[[Autosport]]|date=18 March 2012|accessdate=19 March 2012}}</ref> Hamilton again qualified on pole for the Malaysian Grand Prix, but in the race was passed early on by Fernando Alonso and Sergio Pérez, finishing third. Hamilton took his third consecutive third-place finish in China, with Nico Rosberg and Button ahead. Hamilton qualified in second place in Bahrain, but during the race, a series of poor pitstops put him out of contention, and he finished eighth. Hamilton was also involved in a controversial racing incident with Rosberg, with Rosberg appearing to push Hamilton off track while he attempted to overtake. Hamilton qualified on pole position for the Spanish Grand Prix, but had to stop the car on track in order for a reputable fuel sample to be given post-qualifying. The stewards decided he had breached qualifying rules introduced after a similar incident involving Hamilton at the 2010 Canadian Grand Prix. Race stewards excluded him from the qualifying results,<ref>{{cite news|url=https://www.bbc.co.uk/sport/0/formula1/18047760|title=Lewis Hamilton loses Spanish pole because of rules on fuel|publisher=[[BBC Sport]]|date=12 May 2012|accessdate=14 May 2012}}</ref> and demoted him to the back of the grid; but despite this, Hamilton finished eighth, ahead of Button, who had started in tenth.
 [[Bestaand:Lewis_Hamilton,_United_States_Grand_Prix,_Austin_2012.jpg|rechts|duum|Hamilton during the drivers' parade at the 2012 US Grand Prix]]
