--- a/Edam-Volendam.mw
+++ b/Edam-Volendam.mw
@@ -1,6 +1,6 @@
 {{Gemeante
 | naam = Edam-Volendam
-| bestaandsnaam vlagge = Flag of Edam-Volendam.svg
+| bestaandsnaam vlagge = Flag of Edam-Volendam 1986.svg
 | bestaandsnaam woapn = Wapen van Edam.png
 | lokatie = Dutch Municipality Edam-Volendam 2006
 | proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
