Bij de tied ebracht

--- a/Anne_Hoogebrug.mw
+++ b/Anne_Hoogebrug.mw
@@ -1,13 +1,17 @@
-'''Anne Hoogebrug''' ([[pseudoniem]] van '''Freerk Mulder''') ([[Noorderhoogebrug]], 1950 overleden 03-08-2018)) is n [[Grunnen (provìnzie)|Grunneger]] [[schriever]] en [[dichter]] dij zien waark stoan het ien [[Krödde (tiedschrift)|''Krödde'']], ''[[Toal en taiken]]'', [[Roet (tiedschrift)|''Roet'']] en ''[[Oeze Volk]]''. Nevven proza en dichterij schrift hai teneel. Ien oktober 2009 prizzenteerde hai zien debuutbundel ''As ain poar ogen sloeten''. Titel is een oetdrukken dij zien Opoe Anna - dij veul ien bundel veurkomt - aaltied bruukte as der ain dood goan was,'' 'din kon der nog wel ais van alles achter vot komen'.''<ref>Achterplat van bundel ''As ain poar ogen sloeten'', Uitgeverij Puthok, Paais, 2009</ref>
+'''Anne Hoogebrug''' ([[pseudoniem]] van '''Freerk Mulder''') ([[Noorderhoogebrug]], 1950 - 3 augustus 2018) was n [[Grunnen (provìnzie)|Grunneger]] [[schriever]] en [[dichter]] dij zien waark stoan het ien [[Krödde (tiedschrift)|''Krödde'']], ''[[Toal en taiken]]'', [[Roet (tiedschrift)|''Roet'']] en ''[[Oeze Volk]]''. Nevven proza en dichterij schreef hai teneel.
 
-Hoogebrug het vrouger aaltied ien en om [[Grunnen (stad)|Stad]] woond; vandoag aan dag woont er ien t [[Drenthe|Noord-Drìntse]] [[Paais]]. Hai leest geern '' 'veul onbekind en onbemind talìnt' ''.
+Ien oktober 2009 prizzenteerde hai zien debuutbundel ''As ain poar ogen sloeten'' (bie aigen Uitgeverij Puthok). Titel is een oetdrukken dij zien Opoe Anna - dij veul ien bundel veurkomt - aaltied bruukte as der ain dood goan was,'' 'din kon der nog wel ais van alles achter vot komen'.''<ref>Achterplat van bundel ''As ain poar ogen sloeten'', Uitgeverij Puthok, Paais, 2009</ref>
 
-Onder zien echte noam is er aktief bie [[Partij voor de Dieren]] ien Drìnt.
+Neffens schriever zulf schreef hai nait oet literaire pretenties, mor om zien gevuil n ploats te geven.
+
+Hoogebrug het vrouger aaltied ien en om [[Grunnen (stad)|Stad]] woond; loater woonde er ien t [[Drenthe|Noord-Drìntse]] [[Paais]]. Hai las geern '' 'veul onbekind en onbemind talìnt' ''.
+
+Onder zien echte noam het er aktief west bie [[Partij voor de Dieren]] ien Drìnt.
 
 ==Wellen==
-*[http://www.kunstgaangkaampke.nl/anne%20hoogebrug.htm Kunstgaang Kaampke over Anne Hoogebrug]
+*Nijkeuter, Henk (2016). ''Waor roet en blommen wortel schiet in 't veld. Geschiedenis van de Drentse literatuur 1945-2015''. Beilen: Het Drentse Boek
 *Drents Letterkundig Tiedschrift ''Roet''
-*[http://drenthe.partijvoordedieren.nl/content/view/215 Partij voor de Dieren ien Drìnt]
+*[https://www.facebook.com/huusvandetaol/photos/freerk-mulder-anne-hoogebrug-uut-de-tied-ekomenop-67-jaorige-leeftied-is-op-3-au/1683946485037080/ Nijsbericht Huus van de Taol]
 
 == Rifferenties ==
 <references />
