*Empty MediaWiki Message*

--- a/Brian_O'Nolan.mw
+++ b/Brian_O'Nolan.mw
@@ -85,6 +85,10 @@ Den eyrsten kolumn köäm uut up 4 oktober 1940, under de skuulnaam "An Broc" ("
 
 Nuallain/na gCopaleen skreyv ''Cruiskeen Lawn'' vöär ''The Irish Times'' töt synen doud in 1966.
 
+Hee dröög flink wat by an ''Envoy, A Review of Literature and Art'' en was eyreredaktöör van ne speciale edity rund [[James Joyce]].<ref>"In 1951, doo as ik redaktöör was van et yrske literäre tydskrivt Envoy, leyk et my passend üm te gedenken dat James Joyce teen jår uut de tyd was med een speciaal nummer in syne herinnering, wårin de holdingen en meyningen van syne landgenoaten ståt oaver öären illusteren medgesel. Dårümme nöydigden ik Brian Nolan [sic] üm eyreredaktöör te weasen vöär disse edity. Syn eygene geny köäm, sunder in eanige wyse te wearspegelen of vervalsken, kortby dat van Joyce. Mär as de jaske van Joyce (of müt wy seggen et büys?) ooit döär egeaven worden sul, har der nüms sovöäle recht up as den man den as sikselv under syne skuulnaams Flan [sic] O'Brien en Myles na gCopaleen unwearspreakbår beweasen hevt as den meyst kreativen en satirisken skryver dee Yrland voortbracht hevt seyt Shem the Penman selv." – John Ryan, Inleiding van ''A Bash in the Tunnel'' (1970) [http://www.ricorso.net/rx/az-data/authors/r/Ryan_J2/life.htm John Ryan (1925–92) Ricorso]</ref>) Hee was ouk vake by de ''Envoy''/McDaid pubkring van artistike en literäre figuren so as [[Patrick Kavanagh]], [[Anthony Cronin]], [[Brendan Behan]], [[John Jordan (dichter)|John Jordan]], [[Pearse Hutchinson]], [[J.P. Donleavy]] en künstenaar [[Desmond MacNamara]] den, up versöök van den skryveer, de  bookümslag makeden vöär de eyrste uutgave van ''The Dalkey Archive''. O'Nolan skreyv wydters vöär et tydskrivt ''The Bell'' en underhöld nen column under de titel ''Bones of Contention'' vöär de ''Nationalist and Leinster Times'' under synen skuulnaam George Knowall.
+
+Et meyste van syn latere wark was lösstånde skryvsels in tydskrivten. Vandår dat syn wark når verholding pas late up groute skåle untdekked wör döär literatuurkenners. O'Nolan was berücht üm syn uutvorige gebruuk en bedenken van pseudonymen vöär een grout deyl van syn wark, dat korte verhalen, verhandelingen en breyve an redaktören ümvatteden. Een vulleadig oaversicht van syn skryvwark maken is dårdöär håste unmöägelik. Vulgens brunnen skreyv hee breyve når de ''Irish Times'' üm te klagen oaver syne eygene artikels, byvöärbeyld syne vaste ''Cruiskeen Lawn''-column. En dår skreyv hee dan ouk wear lecht verbolgene, bysündere of selvs lecht gestoorde antwöörde up under andere skuulnaams. Dat sporeden wild giswark an oaver et echt bestån van nen breyvskryver of nit. Et sal nit verrassen dat der mär weinig van O'Nolans pseudonyme wark bekend is.
+
 ==Referensys==
 <references/>
 
