[[Gelderland-Flag.svg]] is vervungen deur [[Flag_of_Gelderland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Gelderlaand.mw
+++ b/Gelderlaand.mw
@@ -1,6 +1,6 @@
 {{Pervincietabel
 | titel          = Provinsie Gelderlaand
-| vlag           = Gelderland-Flag.svg
+| vlag           = Flag of Gelderland.svg
 | waopen         = Gelderland coat.gif
 | kaort          = Gelderland-Position.png
 | taolen         = 
