--- a/Aalten.mw
+++ b/Aalten.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Flag of Aalten.svg
 | bestaandsnaam woapn = Coats of arms of Aalten (new).svg
 | lokatie = LocatieAalten
-| proveensie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| proveensie = [[Ofbeelding:Flag of Gelderland.svg|20px|Gelderlaand]] [[Gelderlaand]]
 | heufdplaats = [[Ofbeelding:Flag of Aalten.svg|20px|Aalten]] Aalten
 | öppervlakte = 97,09 km²
 | öppervlakte laand = 96,57 km²
