--- a/Grolle.mw
+++ b/Grolle.mw
@@ -5,7 +5,7 @@
 | bestansnaam wapen = Groenlo wapen.svg
 | lokasie = LocatieGroenlo
 | gemeente = [[Ofbeelding:Coat of arms of Oost Gelre.svg|20px|Oost Gelre]] [[Oost Gelre]]
-| previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| previnsie = [[Ofbeelding:Flag of Gelderland.svg|20px|Gelderlaand]] [[Gelderlaand]]
 | oppervlak = 9.41
 | oppervlak laand = -
 | oppervlak water = -
