--- a/Lechtenvoorde.mw
+++ b/Lechtenvoorde.mw
@@ -5,7 +5,7 @@
 | bestansnaam wapen = Coat of arms of Lichtenvoorde.svg
 | lokasie = LocatieLichtenvoorde
 | gemeente = [[Ofbeelding:Coat of arms of Oost Gelre.svg|20px|Oost Gelre]] [[Oost Gelre]]
-| previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| previnsie = [[Ofbeelding:Flag of Gelderland.svg|20px|Gelderlaand]] [[Gelderlaand]]
 | oppervlak =
 | oppervlak laand =
 | oppervlak water =
