--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -5,7 +5,7 @@
 | bestansnaam wapen =
 | lokasie = 
 | gemeente = [[Ofbeelding:Coat of arms of Oost Gelre.svg|20px|Oost Gelre]] [[Oost Gelre]]
-| previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| previnsie = [[Ofbeelding:Flag of Gelderland.svg|20px|Gelderlaand]] [[Gelderlaand]]
 | oppervlak = 
 | oppervlak laand =
 | oppervlak water =
