[[Gelderland-Flag.svg]] is vervungen deur [[Flag_of_Gelderland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Zwolle_(Oost_Gelre).mw
+++ b/Zwolle_(Oost_Gelre).mw
@@ -5,7 +5,7 @@
 | bestansnaam wapen = 
 | lokasie =
 | gemeente = [[Oost Gelre]]
-| previnsie = [[Ofbeelding:Gelderland-Flag.svg|20px|Gelderlaand]] [[Gelderlaand]]
+| previnsie = [[Ofbeelding:Flag of Gelderland.svg|20px|Gelderlaand]] [[Gelderlaand]]
 | oppervlak =
 | oppervlak laand =
 | oppervlak water =
