[[Flag_Drenthe.svg]] is vervungen deur [[Flag_of_Drenthe.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR3|Criterion 3]] (obvious error)

--- a/Drenthe.mw
+++ b/Drenthe.mw
@@ -1,6 +1,6 @@
 {{Pervincietabel
 | titel          = Pervincie Drenthe
-| vlag           = Flag Drenthe.svg
+| vlag           = Flag of Drenthe.svg
 | waopen         = WapenDrenthe.jpg
 | kaort          = Drenthe-Position.png
 | taolen         = [[Drèents]], [[Nederlaands]]
