[[Gelderland-Flag.svg]] is vervungen deur [[Flag_of_Gelderland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Vlagge_van_Gelderlaand.mw
+++ b/Vlagge_van_Gelderlaand.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Gelderland-Flag.svg|thumb|right|250px|Vlagge van Gelderlaand (ratio 9:13; de facto 2:3)]]
+[[Ofbeelding:Flag of Gelderland.svg|thumb|right|250px|Vlagge van Gelderlaand (ratio 9:13; de facto 2:3)]]
 De '''vlagge van Gelderlaand''' is ne horizontoale dreekleure in de kleuren (vanof boaven) blauw, geal en zwart. De vlagge wodden op [[15 april]] [[1953]] deur [[Previnsiaole Stoaten]] vast-esteld.
 
 == Et zinnebeeldegen ==
