[[Gelderland-Flag.svg]] is vervungen deur [[Flag_of_Gelderland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file set)

--- a/Lieste_van_plaatsen_in_Gelderland.mw
+++ b/Lieste_van_plaatsen_in_Gelderland.mw
@@ -1,6 +1,6 @@
 {| align=center class=toccolours 
 |- align=center
-|[[Ofbeelding:Gelderland-Flag.svg|130px|Provincievlag]]||Lieste van [[Gelderlaand|Gelderse]] [[stad (woonstee)|staeden]], [[darp]]en en [[buurtschop]]pen<br>met ne verwiezing naor de [[Gemiente (bestuur)|gemeente]] waorto't ze beheurt.
+|[[Ofbeelding:Flag of Gelderland.svg|130px|Provincievlag]]||Lieste van [[Gelderlaand|Gelderse]] [[stad (woonstee)|staeden]], [[darp]]en en [[buurtschop]]pen<br>met ne verwiezing naor de [[Gemiente (bestuur)|gemeente]] waorto't ze beheurt.
 __NOTOC__
 {{abc}}
 |}
