--- a/Galway_(Ierlaand).mw
+++ b/Galway_(Ierlaand).mw
@@ -1,4 +1,5 @@
 [[Ofbeelding:Galway crest.png|thumb|right|200px|Woapn van Galway]]
+[[File:Galway-04-Fussgaengerzone-2017-gje.jpg|thumb|upright=1.2|left|]]
 '''Galway''' ([[Iers]]: ''Gaillimh'') is n snelst greuinden en veerde-grötste stad van [[Ierlaand (laand)|Ierlaand]], en de ennigste stad in de proveensie [[Connacht]]. t Ligt op de westkuste en het in t Iers ook wal ''Cathair na Gaillimhe'': "Stad Galway". t Har in [[2006]] 72,414 inwonners.
 
 n Naamn keump van de [[Corrib-rivier]], wat de westerlike greanze was van de eerste neerzetting, den at ''Dún Bhun na Gaillimhe'' (t fort an n voot van de Gaillimhe) heetn. t Woard Gaillimh beteeknt "steenachtig" as in "steenachtige rivier". De stad hef ook de bienaamn Stämmestad (Cathair na dTreabh), umdet in de [[Hiberno-Normandiese periode]] veerteen stämme (haandelsfemilies) de stad besteurdn. n Naamn "stam" was eagelik nen nearbuugnden term den at nog oet de [[Oliver Cromwell|Cromwelliaanse]] tied keump. De Haandelsfemilies zagn zikzelf as Engelse oadelikn en warn dus trouw an de keuning. Toew at Cromwell öar dus bezatn dee, wusn ze nit good wat ze dr met an mosn, en nömn toew as reaksie den naamn oawer.
