*Empty MediaWiki Message*

--- a/Ni'je_Testement.mw
+++ b/Ni'je_Testement.mw
@@ -3,12 +3,12 @@
 't Ni'je Testement beschref daodn en woordn van [[Jezus Christus|Jezus]] die volgns 't kristndom en et Ni'je Testement de [[Messias]] en de stichter van 't [[christendom|kristendom]] is. Verder staot de vrogge geschiedenisse van de eerste kristlike gemienschappn en de leer en de predeking van de [[apostel]]s d'r in beschreven. 't Ni'je Testement vörmt daormet de veurnaamste groond van 't [[christendom|kristlik geleuf]]. Binnen dat geleuf wördt behalve de Biebeltekste van 't [[Oolde Testement]] ok die van 't Ni'je Testement as '''t Woord van [[God]]'' beschouwd.
 
 == Apocrieven van 't Ni'je Testement ==
-Maa der bint ok in 1948 teksen evönnen, op [[Nag Hammadi]], die ok uut 't vrogge kristendom dateert, de zo enuumde gnostiese geschriften. Dit bint völle boeken die rond 400 nao christus in kruken bint estopt deur monniken, zo hebt luu especuleert. Umdat disse boeken verbeuden wedden, en zelfs de belijders wedden vervolgt, deur de orthodoxie van die tied. De mèrendeel van de boekies bint toe-eschréve töt de [[gnostiek]], 't Gnosticisme. Welk waar 'n vrogge chriselijke stroming, en naos 't [[katholicisme]] miest belèden. 't Gnosticisme, en daorbi'j de Gnostische geschriften wöd töt vandage de dag nog nooit erkent deur de karke.
+Maa der bint ok in 1948 teksen evönnen, op [[Nag Hammadi]], die ok uut 't vrogge kristendom dateert, de zo enuumde gnostiese geschriften. Dit bint völle boeken die rond 400 nao christus in kruken bint estopt deur monniken, zo hebt luu especuleert. Umdat disse boeken verbeuden wördden, en zölfs de belieders wördden vervolgt, deur de orthodoxie van die tied. Et mèrendeel van de boekn bint toe-eschréven noa de [[gnostiek]], 't Gnosticisme. Welk waar 'n vrogge chriselijke ströming, en naos 't [[katholicisme]] miest belèden. 't Gnosticisme, en daorbi'j de Gnostische geschriften wöd töt vandage den dag nog nooit erkent deur de karke.
 
-Disse boekies bint ok toe-eschrèven an Jezus' wark, en zol eschrèven wèèn deur zien discipelen, of mèènsen die 't van hun hadden eheurt. Allene beschrieft disse boekies 'n heel aandere Jezus dan die bint op-enömmen in de Biebel. Disse Jezus wöd veur-esteld as 'n mysticus, iemand die 'n boschop brengt en mèènsen wol ansporen um de ''gnosis'' in zichzölf te herrineren. ''Gnosis'' is 'n heel blangriek begrip in de Gnostiek, 't is 't Griekse woordtie veur 'wèten' of 'kennis'. Wat hier met beduult wöd in de Gnostiek is dat de mèènse zien eggen mut herrineren, zien oorsprong of zien innerlijk Zölf. In plaas van disse onwarkelijke warkelijkheid. 'Ken oezölf' is dan ok 'n heel blangrieke uutspraok van Jezus in iene van de geschriften.
+Disse bukies bint ok toe-eschrèven an Jezus' wark, en zol eschrèven wèèn deur zien discipelen, of mèènsen die 't van hun eheurt hadden. Allene beschrieft disse bukies 'n heel aandere Jezus dan die bint op-enömmen in de Biebel. Disse Jezus wöd veur-esteld as 'n mysticus, iene din 'n bosskop brenk en mèènsen wol ansporen um de ''gnosis'' in zichzölf te herrineren. ''Gnosis'' is 'n heel blangriek begrip in de Gnostiek, 't is 't Griekse weurdtie veur 'wèten' of 'kennis'. Wat hier met bedoolt wöd in de Gnostiek is dat de mèènse zien eagen mut herrineren, zien oorsprung of zien innerlijk Zölf. In plaase van disse onwark'lijke wark'lijkheid. 'Ken oezölm' is dan ok 'n heel blangrieke uutspraoke van Jezus in iene van de geskriften.
 
-In iene van de geschriften wöd vertelt dat YHWH, de god van 't [[Oolde Testement]], juuste de slechte god is. Hi'j zol nao 't eschaopen hebben van de wèreld, de mèènsen laoten èten van de bome, disse bome hef d'r veur ezörgt dat de mèènsen(-zielen) evangen blèven in 'n beparkt lichaam, zonder kennis van wie zi'j echt bint. Jezus röp op um oezölf te herrinneren, en daormet oezölf te bevrijden van dit beparkte materiële bestao. En daormet iene te wödden met 't Al.
-Ma, di-s maar iene visie, want 't Gnosticisme hef veule stromingen ekent.
+In iene van de geskriften wöd vertelt dat YHWH, de god van 't [[Oolde Testement]], juuste den slechten god is. Hi'j zol nao 't eskeupen hebben van de wèreld, de mèènsen laoten èten van de bome, disse bome hef d'r veur ezörgt dat de mèènsen(-zielen) evangen blèven in 'n beparkt lichaam, zonder kennis van wie zi'j echt bint. Jezus röp op um oezölf te herrinneren, en daormet oezölf te bevri'jden van dit beparkte materiële bestao. En daormet iene te wödden met 't Al.
+Ma, di-s maar iene visie, want 't Gnosticisme hef veule stromings ehad.
 
 Iene van 't bekendse, en in disse tied 't miest elèzen, van die aole over-eleverde en verbeuden evangelies is 't [[Evangelie van Tomas]].
 
