--- a/Ni'je_Testement.mw
+++ b/Ni'je_Testement.mw
@@ -15,7 +15,7 @@ Iene van 't bekendse, en in disse tied 't miest elèzen, van die aole over-eleve
 == Jeudse en Griekse namen ==
 't Ni'je Testement verhaalt, zo as de res van de Biebel, in 'n Jeudse umgewing en context. De Apostels en Jezus zölf waren Jeuds en dreugen dan ok Jeudse namen, nao de Jeudse ofkomst. De [[Messiasbeliedende Jeuden|Messiasbeliedende]] Gemiente bestiet uut Jeuden die veur Jezus as Mosjiach (Christus) hebt ekeuzen. Zi'j nemt dan nie de Karklike leer an, maa wilt terugge gaone naor de Jeudse wörtels, met zien gebruken, tradisies en namen. 
 
-Hieronder stiet 'n lieste met namen van de Apostels en aandere Ni'j Testementiese figuren, met hun Jeudse/ Hebreeuwse namen en de Griekse:
+Hieronder 'n lieste met namen van de Apostels en aandere Ni'j Testementiese figuren, met eer Jeudse/ Hebreeuwse namen en de Grieksen:
 
 {| class="wikitable" width="50%"
 |- style="background: #efefef;"
