*Empty MediaWiki Message*

--- a/Nissan_Leaf.mw
+++ b/Nissan_Leaf.mw
@@ -1,4 +1,4 @@
-[[Bestaand:2017 Nissan LEAF (ZE0 MY17) hatchback (2018-11-02) 01.jpg|duum|1e generoatsie Nissan Leaf]]
+[[Bestaand:2011 Nissan Leaf SL -- 10-28-2011.jpg|duum|1e generoatsie Nissan Leaf]]
 [[Bestaand:Nissan Leaf 012.JPG|duum|Akkupakket 1e generoatsie Leaf]]
 De '''Leaf''' is n elektrische auto van de Japanse fabrikant '''Nissan'''. De noam Leaf is n òfkörten van ''Leading, Environmentally friendly, Affordable, Family car''. De viefdeurs gezinswoagen kwam in december 2010 op d'Europese maarkt en was sunt meert 2011 in Nederland leverboar. In september 2017 het Nissan de twijde generoatsie Leaf prezenteerd, dij vanòf jannewoarie 2018 in Nederland leverboar wordt.
 
