[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Noord-Hollaand.mw
+++ b/Noord-Hollaand.mw
@@ -1,6 +1,6 @@
 {{Provinzietabel |
 noam = Noord-Hollaand|
-vlageofbeelden = [[Bestaand:Flag North-Holland, Netherlands.svg|120px|Perveensievlagge]]|
+vlageofbeelden = [[Bestaand:Flag of North Holland.svg|120px|Perveensievlagge]]|
 woapenofbeelden = [[Bestaand:Wapen van Noord-Holland.svg|90px|Perveensiewaopen]]|
 körtnoam = Noord-Hollaand |
 heufdstad = [[Haarlem]]|
