[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Alkmaar.mw
+++ b/Alkmaar.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Alkmaar Flag.svg
 | bestaandsnaam woapn = Wapen van Alkmaar bewerkt.PNG
 | lokatie = Map_-_NL_-_Municipality_code_0361_(2014)
-| proveensie = [[Bestaand:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Bestaand:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = '''Alkmaar'''
 | öppervlakte = 31,20
 | öppervlakte laand = 29,26
