--- a/Amstelvene.mw
+++ b/Amstelvene.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Amstelveen flag.svg
 | bestaandsnaam woapn =Coat_of_arms_of_Amstelveen.png
 | lokatie = Dutch Municipality Amstelveen 2006
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = '''Amstelvene'''
 | öppervlakte = 42,38
 | öppervlakte laand = 40,25
