[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Andiek.mw
+++ b/Andiek.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Andijk flag.svg
 | bestaandsnaam wapen = Wapen andijk.jpg
 | lokasie = Dutch Municipality Andijk 2006
-| provinsie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| provinsie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaotse = '''Andiek'''
 | oppervlakte = 47,70
 | oppervlakte laand = 20,99
