[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Beemster.mw
+++ b/Beemster.mw
@@ -7,7 +7,7 @@
 | bestaandsnaam vlagge = Beemster flag.svg
 | bestaandsnaam woapn = Beemster wapen.png
 | lokatie = LocatieBeemster
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = [[Middenbeemster]]
 | öppervlakte = 72,08
 | öppervlakte laand = 69,28
