--- a/Bennebrook.mw
+++ b/Bennebrook.mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge = Bennebroek flag.svg
 | bestaandsnaam woapn = Bennebroek wapen.svg
 | lokatie = Dutch Municipality Bennebroek 2006
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = '''Bennebrook'''
 | öppervlakte = 1,75
 | öppervlakte laand = -
