[[Flag_North-Holland,_Netherlands.svg]] is vervungen deur [[Flag_of_North_Holland.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]] (harmonizing names of file s

--- a/Bargen_(Noord-Hollaand).mw
+++ b/Bargen_(Noord-Hollaand).mw
@@ -3,7 +3,7 @@
 | bestaandsnaam vlagge =Bergen_(Noord-Holland)_vlag.svg
 | bestaandsnaam woapn =Coat_of_arms_of_Bergen_(North_Holland).svg
 | lokatie = LocatieBergenNH
-| proveensie = [[Ofbeelding:Flag North-Holland, Netherlands.svg|20px|Noord-Holland]] [[Noord-Holland]]
+| proveensie = [[Ofbeelding:Flag of North Holland.svg|20px|Noord-Holland]] [[Noord-Holland]]
 | heufdplaats = Bargen
 | öppervlakte = 119,85
 | öppervlakte laand = 97,15
